--- a/eshopper/src/main/resources/templates/fragments/layout.html
+++ b/eshopper/src/main/resources/templates/fragments/layout.html
@@ -146,6 +146,7 @@
                             <a href="/index" class="nav-item nav-link active">Home</a>
                             <a href="/category/index" class="nav-item nav-link">category</a>
                             <a href="/shipper/index" class="nav-item nav-link">Shipper</a>
+                            <a href="/products/index" class="nav-item nav-link">Products</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
